mp7/grade.txt
Compilation Results:
********************
sudoku.c: In function ‘int solve_sudoku(int (*)[9])’:
sudoku.c:118:32: error: ‘all_cells_assigned’ was not declared in this scope
   if (all_cells_assigned(sudoku) == 1) //if no empty cells
                                ^
g++: error: grade/sudoku.o: No such file or directory

******Testing mp7******
Grade:
******
Late submission: 0
Functionality: 0
Comments and Style:5
Intro paragraph: 5
Total: 10
